# http-archive-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: smoke.py
src/http_archive_mcp/: client.py  server.py
