[project]
name = "http-archive-mcp"
version = "0.2.0"
description = "MCP server wrapping the HTTP Archive Tech Report API — adoption, performance, and category data for ~2,500 web technologies."
readme = "README.md"
authors = [{ name = "Casey Burridge" }]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
http-archive-mcp = "http_archive_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/http_archive_mcp"]
